# ml_project_template

./: .env.example  .gitignore  .gitignore.example  README.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
configs/: training_configs.yaml
docker/: Dockerfile  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml
notebooks/: binary_classifier_model_training.ipynb  multiclass_classifier_model_training.ipynb
src/ml_project_template/: config.py  error_classes.py  logger_config.py  logger_setup.py  main.py  models.py  utils.py
src/ml_project_template/api/: app.py  inference.py
src/ml_project_template/api/routes/: api.py
src/ml_project_template/configs/: __init__.py  general_config.py  loader.py  model_configs.py  validator.py
src/ml_project_template/core/configs/: __init__.py  loader.py  model_configs.py  validator.py
src/ml_project_template/core/schemas/: __init__.py  request_schemas.py  response_schemas.py  training_configs.py
src/ml_project_template/core/utils/: __init__.py  postprocessing.py  preprocessing.py  utils.py
src/ml_project_template/early_stopping/: early_stopping.py
src/ml_project_template/errors/: __init__.py  exceptions.py
src/ml_project_template/logging/: __init__.py  setup.py
src/ml_project_template/metrics/: __init__.py
src/ml_project_template/metrics/classification/: metrics.py
src/ml_project_template/metrics/regression/: metrics.py
src/ml_project_template/model/: __init__.py  loader.py  trainer.py
src/ml_project_template/notebooks/: binary_classifier_model_training.ipynb  multiclass_classifier_model_training.ipynb
src/ml_project_template/schemas/: __init__.py  training_configs.py
src/ml_project_template/scripts/: export_model_to_onnx_and_save_to_mlflow.py
src/ml_project_template/services/: __init__.py  inference.py  postprocessing.py  preprocessing.py
src/ml_project_template/serving/api/: app.py
src/ml_project_template/serving/model/: __init__.py  loader.py
src/ml_project_template/serving/services/: __init__.py  inference.py
src/ml_project_template/training/: run.py
temp_models/: model.onnx
tests/: test_utils.py
tests/configs/: test_configs_loader.py  test_loader.py  test_validator.py
tests/core/configs/: test_configs.yaml  test_configs_loader.py  test_validator.py
tests/core/logging/: test_logs.json  test_setup.py
tests/inference/model/: test_model_loader.py
tests/inference/services/: test_inference.py
tests/logging/: test_logs.json  test_setup.py
tests/metrics/classification/: test_metrics.py
tests/metrics/regression/: test_metrics.py  test_regression_metrics.py
tests/model/: test_loader.py  test_model_loader.py  test_trainer.py
tests/services/: test_inference.py
tests/training/model/: test_trainer.py
tests/training/utils/: test_count_model_params.py  test_create_dataloaders.py
(+15 files in other folders)
