[project]
name = "ml-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MarwanMohammed2500", email = "marwanmohammed2500@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.3",
    "pydantic>=2.12.5",
    "pydantic-yaml>=1.6.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]

[project.scripts]
ml-project-template = "ml_project_template:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
linter = [
    "ruff>=0.15.5",
]
