[project]
name = "ml-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MarwanMohammed2500", email = "marwanmohammed2500@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "great-expectations",
    "gunicorn>=23.0.0",
    "mlflow==3.10.1",
    "numpy>=2.4.2",
    "onnx==1.21.0",
    "onnxruntime>=1.24.3",
    "onnxscript>=0.6.2",
    "protobuf==4.25.1",
    "pyarrow==23.0.1",
    "pydantic>=2.12.5",
    "pydantic-yaml>=1.6.0",
    "python-dotenv>=1.2.2",
    "pytorch-lightning>=2.6.1",
    "ruff>=0.15.5",
    "scipy>=1.17.1",
    "sqlalchemy>=1.4.0,<2.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
ml-project-template = "ml_project_template:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
experimentation = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas<3",
    "torch>=2.11.0",
    "torchmetrics>=1.9.0",
]
linter = [
    "ruff>=0.15.5",
]
testing = [
    "pytest>=9.0.2",
]
train = [
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchmetrics>=1.9.0",
    "tqdm>=4.67.3",
]

[tool.uv]
default-groups = "all"
